CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

SET(EXECUTABLE  test_softmax_policy)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubeailib)
TARGET_LINK_LIBRARIES(${EXECUTABLE} rlenvscpplib)

IF( USE_PYTORCH )
	TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

IF(ENABLE_WEBOTS_FLAG)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} CppController)
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest)
TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest_main) # so that tests dont need to have a main
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
target_link_libraries(${EXECUTABLE} tbb)
target_link_libraries(${EXECUTABLE} boost_log)

